# IoT-irrigation-systems-controller-discord-bot

./: .gitignore  README.md  app.py  discord_bot.py  main.py  pyproject.toml
